force-app/main/default/staticresources/python/Disappear/src/objects/Contact_Address__c.object
<CustomObject>
    <description>This Object holds multiple addresses for an Author Contact</description>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Street Address Line 2</description>
        <label>Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Source__c</fullName>
        <description>Source of the Author Address information</description>
        <inlineHelpText>Source of the Author Address information. Either the data is populated automatically or entered by the user.</inlineHelpText>
        <label>Address Source</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Contact City</description>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Addresses</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Author Email</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Author Fax Number</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile phone of the Author</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number of the Author</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a selection for the user to designate a primary address for a Contact</description>
        <inlineHelpText>This is a selection for the user to designate a primary address for a Contact. There can only be one Primary Address for a Contact.</inlineHelpText>
        <label>Primary Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province</description>
        <label>State/Province</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address Line 1</description>
        <label>Address Line 1</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Study_Site_Name__c</fullName>
        <description>Study Site Name for the Author</description>
        <label>Study Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_Website__c</fullName>
        <description>Study Site Website for the Author</description>
        <label>Study Site Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website of the Author</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Contact Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>